# FRA333

./: .gitignore  README.md  calibrate.csv  frames.gv
install/: local_setup.sh  setup.sh
log/: latest_build
src/: test.urdf
src/Demo_IMU_ArduinoIDE/Demo_IMU/: Demo_IMU.ino
src/HW1_with_testcase/: FRA333_HW_1.py  FRA333_HW_1_testcase.py  trackbeebot.py
src/HW2/: fra333_hw2.py
src/HW2_6362_6368/: Note_code.ipynb  fra333_hw2.py  test.ipynb
src/dummy/: CMakeLists.txt
src/dummy/src/: cpp_node.cpp
src/fra333_hw1_6362_6368/: FRA333_HW_1_testcase.py
src/fra333_hw2_25/doc/: hw2.ipynb  (+1 more)
src/fra333_hw2_6362_6368/: fra333_hw2.py
src/fra333_lab3_25_v1/: CMakeLists.txt  package.xml
src/fra333_lab3_25_v1/cocoav_kinematics/: CMakeLists.txt
src/fra333_lab3_25_v1/cocoav_kinematics/arduino/cocoav_imu_ad/: cocoav_imu_ad.ino
src/fra333_lab3_25_v1/cocoav_kinematics/launch/: arduino_imu.launch.py  display_with_kinematic.launch.py  display_with_kinematics_srv.launch.py
src/fra333_lab3_25_v1/cocoav_kinematics/scripts/: cocoav_calibrator_findconfig.py  cocoav_imu_calib.yaml  cocoav_imu_calibration.py  cocoav_trajectory_generator.py  fk_ik_server.py  kinematics_server.py  testnode.py  trajectory_gen.py
src/fra333_lab3_25_v1/cocoav_kinematics/scripts/imucal/: arduino_imu.json  basic_ferraris.ipynb  calibrate.csv  calibrate2.csv  cocoa_calibate.ipynb  imu.ipynb  section_list.json
src/fra333_lab3_25_v1/cocoav_kinematics/scripts/imucal/info/arduinoimu/Ferraris/: arduinoimu_2022-11-23_00-00.json
src/my_first_package/: CMakeLists.txt  frames.gv  package.xml
(+1623 files in other folders)
